# aos-infrastructure

./: .gitignore  README.md  error-message.txt  pyproject.toml
.github/specs/: repository.md
.github/workflows/: cost-management.yml  deploy-foundry-agent.yml  deploy-function-app.yml  infra-ai-services.yml  infra-compute.yml  infra-foundation.yml  infra-governance.yml  infrastructure-deploy.yml  infrastructure-drift-detection.yml  infrastructure-governance.yml  infrastructure-monitoring.yml  infrastructure-troubleshooting.yml  orchestrator-full-stack.yml  sovereign-provisoning.lock.yml  sovereign-provisoning.md
deployment/: .gitignore  RESOURCE-INVENTORY.md  azure-status.csv  deploy.py  main-modular.bicep
deployment/docs/: REGIONAL_UPDATES_README.md  REGIONAL_VALIDATION_FLOW.md
deployment/examples/: orchestrator_example.py
deployment/modules/: README.md  a2a-connections.bicep  ai-gateway.bicep  ai-hub.bicep  ai-project.bicep  ai-services.bicep  ai-sku-policy-def.bicep  budget.bicep  compute.bicep  foundry-app.bicep  functionapp-ssl.bicep  functionapp.bicep  gitops-compliance-rbac.bicep  gitops-compliance.bicep  gitops-feedback.bicep  identity.bicep  keyvault.bicep  lora-inference.bicep  machinelearning.bicep  model-registry.bicep  monitoring.bicep  policy.bicep  rbac.bicep  servicebus.bicep  storage.bicep
deployment/orchestrator/: README.md  __init__.py  requirements.txt
deployment/parameters/: README.md  dev.bicepparam  prod.bicepparam  staging.bicepparam
docs/: api-reference.md  architecture.md  contributing.md  deployment.md  dns-setup.md  workflows.md
(+79 files in other folders)
