[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aos-infrastructure"
version = "5.0.0"
description = "Azure infrastructure lifecycle manager for the Agent Operating System — Governance, Automation, and Reliability"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.12.0",
    "azure-identity>=1.16.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-costmanagement>=4.0.0",
    "azure-mgmt-msi>=7.0.0",
    "azure-keyvault-secrets>=4.7.0",
    "azure-mgmt-web>=7.0.0",
    "azure-mgmt-monitor>=6.0.0",
    "azure-mgmt-servicebus>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pylint>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["deployment/tests"]

[project.urls]
Homepage = "https://github.com/ASISaga/aos-infrastructure"
Documentation = "https://github.com/ASISaga/aos-infrastructure/tree/main/docs"
Repository = "https://github.com/ASISaga/aos-infrastructure"

[tool.setuptools.packages.find]
where = ["deployment"]

[tool.pylint.main]
max-line-length = 120
